--- a/src/main/resources/templates/components/sign-in.html
+++ b/src/main/resources/templates/components/sign-in.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" href="../../static/css/style-sign-in.css" th:href="@{/css/style-sign-in.css}">
   </head>
   <body>
-  	<div>
+ 
     <div class="logo">
-      <img src="../../static/images/tiki-logo.png" th:src="@{/images/tiki-logo.png}">
+      <img src="../../static/images/tiki-logo.png" height="100px" width="100px" th:src="@{/images/tiki-logo.png}">
     </div>
     <div class="login">
     	<h1>Đăng nhập </h1>
     </div>
-<div class="dangnhap">
+    
+    <form action="/dangnhap" method="post">
+    <div class="dangnhap">
 <label for="login_field" class="dangnhap1">
  Tên đăng nhập
 </label><br>
@@ -22,10 +24,20 @@
 <label for="password" class="matkhau1">Password</label>
 <a class="label-link" href="/password_reset">Forgot password?</a><br>
 <input type="text" name="password" id="password" class="matkhau"><br>
-<button class="dangnhap2">
+<div class="alert alert-warning" hidden="true">
+    <a href="#" class="close" data-dismiss="alert">&times;</a>
+    <strong>Warning!</strong> There was a problem with your network connection.
+</div>
+<button class="dangnhap2" type="submit">
 	Đăng nhập
 </button>
-<a class="label-link" href="sign-up.html" th:href="@{account-list}">List</a><br>
+<p class="create-account-callout mt-3">
+        Đăng Ký Tài Khoản?
+        <a data-hydro-click="" th:href="@{/sign-up}">Create an account</a>.
+</p>
 </div>
+
+</form>
+
   </body>
   </html>
